# WordWeave-

./: .gitignore  README.md  The_Current_State_of_AI_in_September_2024.md  pyproject.toml
src/wordweaveai/: crewai_flow.html  main.py
src/wordweaveai/crews/outline_crew/: outline_crew.py
src/wordweaveai/crews/writing_crew/: writing_crew.py
src/wordweaveai/tools/: custom_tool.py
