[project]
name = "wordweaveai"
version = "0.1.0"
description = "WordWeaveAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "duckduckgo-search>=7.1.1",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
]

[project.scripts]
kickoff = "wordweaveai.main:kickoff"
plot = "wordweaveai.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
